--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'eclipse'
+
+sourceCompatibility = 1.6
 
 repositories {
-	maven {
-	        url "http://content1.local:8081/nexus/content/groups/public/"
-	    }
+	mavenCentral()
+	/*maven {
+		url "http://content1.local:8081/nexus/content/groups/public/"
+	}*/
 }
 
 dependencies {
