add grid tests w/ testng tasks

--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,18 @@ repositories {
 
 dependencies {
 	testCompile "org.seleniumhq.selenium:selenium-java:2.13.0",
-							"junit:junit:4.10"
+				"junit:junit:4.10",
+                "org.testng:testng:5.14.1"
+}
+
+task seGridParallel(type: Test) {
+	useTestNG() {
+		suites 'src/test/resources/parallel-suite.xml'
+	}
+}
+
+task seGridSerial(type: Test) {
+	useTestNG() {
+		suites 'src/test/resources/serial-suite.xml'
+	}
 }
