--- a/studentSandbox/build.gradle
+++ b/studentSandbox/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'eclipse'
 sourceCompatibility = 1.6
 
 repositories {
+    //mavenCentral()
 	maven {
 		url "http://content1.local:8081/nexus/content/groups/public/"
 	}
